--- a/dz-2.html
+++ b/dz-2.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>DZ 1.2</title>
-    <script src="js/script.js" defer></script>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ДЗ 2.2</title>
+    <link rel="stylesheet" href="css/style dz-2.css">
+</head>
+<body>
+    <h1>Наши новости</h1>
+    <div class="text" style="border: solid 3px darkgray;">
+        <h2>О компании</h2>
+        <img src="img/1.jpeg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus quis ipsa atque culpa saepe, tenetur incidunt similique blanditiis ad vitae qui temporibus aperiam aut animi delectus iste libero reiciendis voluptates ipsum ut minus porro. Harum, deleniti qui quisquam ea delectus ad recusandae nostrum iusto, soluta quaerat esse nesciunt ducimus! Perspiciatis?</p>
+        <a href="#">Подробнее...</a>
+    </div>
+    <div class="text" style=" border: dashed 3px darkgray;">
+        <h2>Контакты</h2>
+        <img src="img/2.jpeg" alt="">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis labore, quos quisquam aperiam inventore, enim magni aspernatur commodi itaque, natus nisi doloribus iste a sed provident! Reiciendis quisquam esse cum?</p>
+        <a href="#">Подробнее...</a>
+    </div>
+
+    
+</body>
 </html>
